
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================
EDT: 
- Facilités de navigation Classe/Prof/Salle en cliquant dans le créneau affiché.

Absences2:
- Tableau des appels: Possibilité d'afficher l'EDT de la classe en infobulle.

Gestion:
- Gestion des classes/enseignements: Ajout de liens d'affichage de l'EDT prof en infobulle.
- Consultation élève: Ajout de l'affichage de MEF.
- Possibilité de définir des événements à telles dates pour telles classes avec affichage en Panneau d'affichage.
- Possibilité de conserver des mots de passe dans la base Gepi en mode SSO pour mettre en place un accès de secours quand l'authentification SSO fait des siennes.
- Possibilité de générer les bulletins pour certains responsables non légaux (cas des familles d'accueil).

Discipline:
- Possibilité de définir des avertissements de fin de période,
  de les saisir depuis les pages de saisie de l'avis du conseil de classe,
  et de les imprimer au format OOo.

Divers:
- Statistiques de connexion:
   . Possibilité de cumuler les connexions élèves et parents.
   . Export CSV des dates/effectifs de connexion.

Gepi-1.6.4 (01/02/2014)
===========================

Note importante:
  Les fonctions mysql_* de PHP sont marquées obsolètes dans les versions récentes de PHP.
  Il est recommandé de passer à l'utilisation de fonctions mysqli_* de l'extension mysqli.
  Gepi-1.6.4 suit donc les préconisations des développeurs PHP quant à l'abandon de ces fonctions.
  Si vous mettez à jour depuis une version antérieure de Gepi, vous pouvez contrôler 
  dans Gepi si l'extension mysqli est active en vous rendant dans 
     Gestion générale/Configuration serveur/Liste des modules implémentés avec votre PHP
  Le passage à mysqli devrait être transparent pour les utilisateurs, mais il implique de mettre à 
  jour les éventuels plugins mis en place sur votre Gepi.
  Les plugins officiels mis à jour sont disponibles ici: 