@@ -1657,6 +1657,30 @@ if(isset($_GET['mode'])) {
 
 		// Hauteur par defaut des lignes de tableau:
 		$h_cell=10;
+		// La hauteur de ligne est-elle imposée?
+		// Par défaut, on tente d'utiliser au mieux la hauteur de la page en modifiant $h_cell plus loin.
+		// Il est possible d'interdire la modification
+		// (cela peut servir, en mettant un $h_cell élevé, en DEBUG à forcer l'affichage sur plusieurs pages).
+		$hauteur_ligne_imposee="n";
+
+		if((isset($_GET['forcer_hauteur_ligne_pdf']))&&
+		($_GET['forcer_hauteur_ligne_pdf']=="y")&&
+		(isset($_GET['visu_toutes_notes_h_cell_pdf']))&&
+		($_GET['visu_toutes_notes_h_cell_pdf']!="")&&
+		($_GET['visu_toutes_notes_h_cell_pdf']>0)&&
+		(preg_match("/^[0-9]*$/", $_GET['visu_toutes_notes_h_cell_pdf']))) {
+			$hauteur_ligne_imposee="y";
+			$h_cell=$_GET['visu_toutes_notes_h_cell_pdf'];
+			if(getPref($_SESSION["login"], "visu_toutes_notes_forcer_h_cell_pdf", "n")!="y") {
+				savePref($_SESSION['login'], "visu_toutes_notes_forcer_h_cell_pdf", "y");
+			}
+			savePref($_SESSION['login'], "visu_toutes_notes_h_cell_pdf", $_GET['visu_toutes_notes_h_cell_pdf']);
+		}
+		else {
+			if(getPref($_SESSION["login"], "visu_toutes_notes_forcer_h_cell_pdf", "n")!="n") {
+				savePref($_SESSION['login'], "visu_toutes_notes_forcer_h_cell_pdf", "n");
+			}
+		}
 
 		// Largeur des colonnes
 		$largeur_col=array();
@@ -1825,7 +1849,10 @@ if(isset($_GET['mode'])) {
 		}
 		//===========================
 
-		$h_cell=min(10, floor(($hauteur_page-$marge_haute-$marge_basse-$h_ligne_titre_page-$h_ligne_titre_tableau)/(count($col)-1)));
+		//$h_cell=min(10, floor(($hauteur_page-$marge_haute-$marge_basse-$h_ligne_titre_page-$h_ligne_titre_tableau)/(count($col)-1)));
+		if($hauteur_ligne_imposee!="y") {
+			$h_cell=min(10, floor(($hauteur_page-$marge_haute-$marge_basse-$h_ligne_titre_page-$h_ligne_titre_tableau)/(count($col)+3)));
+		}
 
 		/*
 		$pdf->SetXY(10, 110);
@@ -1965,6 +1992,17 @@ if(($aff_rang)&&($aff_rang=='y')) {
 if(($aff_date_naiss)&&($aff_date_naiss=='y')) {
 	echo "&amp;aff_date_naiss=$aff_date_naiss";
 }
+
+if((isset($_POST['forcer_hauteur_ligne_pdf']))&&
+($_POST['forcer_hauteur_ligne_pdf']=="y")&&
+(isset($_POST['visu_toutes_notes_h_cell_pdf']))&&
+($_POST['visu_toutes_notes_h_cell_pdf']!="")&&
+($_POST['visu_toutes_notes_h_cell_pdf']>0)&&
+(preg_match("/^[0-9]*$/", $_POST['visu_toutes_notes_h_cell_pdf']))) {
+	echo "&amp;forcer_hauteur_ligne_pdf=".$_POST['forcer_hauteur_ligne_pdf'];
+	echo "&amp;visu_toutes_notes_h_cell_pdf=".$_POST['visu_toutes_notes_h_cell_pdf'];
+}
+
 echo add_token_in_url();
 
 echo "' target='_blank'>PDF</a>
